Fix overflow in mobile description

--- a/src/www/containers/teamprofile/TeamProfile.scss
+++ b/src/www/containers/teamprofile/TeamProfile.scss
@@ -476,7 +476,7 @@
         }
       }
       > h3 {
-        display: flex;
+        display: block;
         font-size: 0.9rem; //max 400 characters
         text-align: left;
       }
